kubernetes/staging/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: one-a
  labels:
    app: one-a
    project: one-a
spec:
  selector:
    matchLabels:
      app: one-a
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: one-a
        project: one-a
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: one-a
          image: reg.sighup.io/kage/one-a:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: one-a
  labels:
    app: one-a
    project: one-a
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: one-a
